8136552: Last argument wins does not work for special options with "-XX:VMOptionsFile" option

Match_special_option_and_act() should insert_vm_options_file() earlier and process the inserted options right away to honor "last option wins" semantics.

Reviewed-by: dcubed, coleenp